--- a/day01_20211009/ex01_first.html
+++ b/day01_20211009/ex01_first.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>안녕하세요</h1>
+    <b>글자가</b>
+    <strong>어떻게 나오는지</strong>
+    <i>한번 보시면</i>
+    <small>바로</small>
+    <del>알 수가</del>
+    <sub>있지오</sub>
+    <sup>ddd</sup>
 </body>
 </html>
