--- a/day01_20211009/ex01_first.html
+++ b/day01_20211009/ex01_first.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        /* h1태그에 빨간 배경색지정 */
+        h1{
+            background-color: blue;
+        }
+        strong{
+            background-color: red;
+            /* 인라인 요소를 블록요소로 변경 */
+            display: block;
+        }
+    </style>
 </head>
 <body>
     <h1>안녕하세요</h1>
@@ -15,5 +26,12 @@
     <del>알 수가</del>
     <sub>있지오</sub>
     <sup>ddd</sup>
+    <p>qqqq</p>
+
+    <!-- 링크태그
+    href 속성: 목적지 주소값 -->
+    <a href="https://www.naver.com" target="blank">네이버로 이동</a>
+    <!-- target=blank 새창에 해당 링크를 띄움 -->
+    <a href="https://www.naver.com">네이버로 이동</a>
 </body>
 </html>
