--- a/day20211117/index.html
+++ b/day20211117/index.html
@@ -12,13 +12,13 @@
             height: 3000px;
         }
         header{
-            background-color: #040d22;
+            background-color:black;
         }
         section{
-            background-color: rgb(219, 129, 12);
+            background-color:black;
         }
         #skills{
-            background-color: rgb(67, 136, 67);
+            background-color: rgb(35, 75, 35);
         }
         #projects{
             background-color: gray;
@@ -51,7 +51,7 @@
             </ul>
             <div class="d-flex">
                 <input type="text" class="form-control" placeholder="Search">
-                <button class="btn btn-link text-light text-decoration-none flex-shrink-0">Sign in</button>
+                <button class="btn btn-link text-light text-decoration-none flex-shrink-0" onclick="location.href='./signin.html'">Sign in</button>
                 <button class="btn btn-outline-light flex-shrink-0" onclick="location.href='./signup.html'">Sign up</button>
 
             </div>
@@ -86,10 +86,10 @@
     
     <!-- 본문영역 -->
     <section id="intro">
-        <div class="container-md text-center bg-success">
-            <h3 class="pt-2">자기소개 간단한 멘트</h3>
-            <img src="../다운로드.png" alt="" width="350" height="150">
-            <h3>간단한 소개글</h3>
+        <div class="container-md text-center bg-black">
+            <h3 class="pt-2" style="color: white;">KIM JAE YEOP</h3>
+            <img src="../이미지/program-g865a15376_1920.jpg" alt="" width="1000px">
+            <h3 style="color: white;">프로젝트 보러가기</h3>
             <a href="#" class="btn btn-primary my-2">Github link</a>
         </div>
     </section>
@@ -101,7 +101,7 @@
                 <h4>사용가능한 언어 및 툴 소개</h4>
             </div>
             <div class="row">
-                <div class="col-4 text-center" style="background-color: red;">
+                <div class="col-4 text-center" style="background-color: white;">
                     <div>
                         <h4>Programming Languege</h4>
                         <h5>java</h5>
@@ -117,7 +117,7 @@
                 <div class="col-4 text-center" style="background-color: green;">
                     <img src="../images.jpg" alt="" height="350">
                 </div>
-                <div class="col-4 text-center" style="background-color: blue;">
+                <div class="col-4 text-center" style="background-color: white;">
                     <div>
                         <h4>Frameworks</h4>
                         <h5>Spring Boot</h5>
