--- a/day20211116/ex02_phoneCheck.html
+++ b/day20211116/ex02_phoneCheck.html
@@ -12,7 +12,7 @@
     </style>
     <script>
         function phoneCheck(){
-            const exp =  /^d{3}-\d{4}-\d{4}$/;
+            const exp =  /^\d{3}-\d{4}-\d{4}$/;
             const phone = document.getElementById('phone').value
             const result = document.getElementById('phone-check-result')
 
