--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h3 class="pt-2" style="color: white;">KIM JAE YEOP</h3>
             <img src="../이미지/program-g865a15376_1920.jpg" alt="" width="1000px">
             <h3 style="color: white;">프로젝트 보러가기</h3>
-            <a href="#" class="btn btn-primary my-2">Github link</a>
+            <a href="https://github.com/Yeoobee/Yeoobee.github.io" class="btn btn-primary my-2">Github link</a>
         </div>
     </section>
 
