--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+            </style>
+        
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
     </style>
@@ -72,12 +76,8 @@
                 </li>
             </ul>
             <div class="d-flex">
-                <input type="text" class="form-control" placeholder="Search">
-                <button class="btn btn-link text-light text-decoration-none flex-shrink-0"
-                    onclick="location.href='./signin.html'">Sign in</button>
-                <button class="btn btn-outline-light flex-shrink-0" onclick="location.href='./signup.html'">Sign
-                    up</button>
 
+                <h3 style="font-family: 'Black Han Sans', sans-serif; color: white;" >재엽's portfolio</h3>
             </div>
             <!-- data-bs-target="#offcanvas": offcanvas에서 보여줄 내용(id)가 offcanvas로 지정된 요소를 보여주겠다. -->
             <button class="btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvas">
@@ -97,12 +97,6 @@
                     </ul>
                     <input type="text" class="form-control mb-2" placeholder="Search">
                     <!-- d-grid: 해당 요소를 한줄에 채워서 표시할 수 있음. -->
-                    <div class="d-grid mb-2">
-                        <button class="btn btn-outline-primary">Sign in</button>
-                    </div>
-                    <div class="d-grid">
-                        <button class="btn btn-primary">Sign up</button>
-                    </div>
                 </div>
             </div>
         </div>
@@ -178,7 +172,7 @@
                     </div>
                 </div>
                 <div class="col-4 text-center">
-                    <img src="../이미지/computer-g347a5bcae_1920.png" alt="" width="600px">
+                    <img src="./이미지/program.png" alt="" width="600px">
                 </div>
                 <div class="col-4 text-center" style="background-color: white;">
                     <div>
@@ -219,10 +213,10 @@
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./이미지/xxx.jpg" alt="" width="700px">
+                            <img src="./이미지/예약.png" alt="" width="1200px">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
+                                <h5 style="font-family: 'Gugi', cursive;">StudyRoom Reservation</h5>
+                                <p style="font-family: 'Nanum Gothic Coding', monospace;"><b>개발기간: 2021.12.20-2021.12.31</b></p>
                             </div>
                         </div>
                         <div class="carousel-item">
